--- a/.env.development
+++ b/.env.development
@@ -8,7 +8,7 @@ VITE_UPLOAD_CHUNK_SIZE=1048576
 VITE_MAX_FILE_SIZE=104857600
 
 # Application Configuration
-VITE_APP_NAME=Trello Clone (Dev)
+VITE_APP_NAME=Ijro tizimi
 
 # Debug Mode
 VITE_DEBUG=true
