--- a/.env.production
+++ b/.env.production
@@ -2,14 +2,14 @@
 
 # API Configuration
 # Update this to your production API URL
-VITE_API_BASE_URL=https://api.yourdomain.com/api
+VITE_API_BASE_URL=https://0afe13547989.ngrok-free.app/api
 
 # Upload Configuration
 VITE_UPLOAD_CHUNK_SIZE=1048576
 VITE_MAX_FILE_SIZE=104857600
 
 # Application Configuration
-VITE_APP_NAME=Trello Clone
+VITE_APP_NAME=Ijro tizimi
 
 # Debug Mode
 VITE_DEBUG=false
